ensoftek_mu2_170.314.e3 - Secure Messaging

--- a/patients/css/base.css
+++ b/patients/css/base.css
@@ -53,6 +53,15 @@
 	    font-style: italic;
 	}
 	
+	.timeDisplay {
+		position: absolute;
+		margin-left: 500px;
+		text-align: right;
+		color: black;
+		top: -40px;
+		font-style: italic;
+	}
+	
 	#wrapper {
 	    width: 400px;
 	    background-color: white;
